# Motel-Reservation-System

./: readme.md
design-docs/excalidraw/: board1.excalidraw  board2.excalidraw  board3.excalidraw  project.excalidraw
jobs/: .env  .env.example  Dockerfile  main.py  utils.py
k8-cluster/: cluster-config.yaml  create-cluster.sh  delete-cluster.sh  get-cluster-roles.sh
k8s/: mongo.yaml  motel-api-gateway.yaml  postgress-pvc.yaml  postgress.yaml  reservation-apis.yaml  sc-gp3-default.yaml
motel-api-gateway/: Cargo.toml  Dockerfile  docker-compose.yml  routes.yaml  run.sh  update-ecr.sh
motel-api-gateway/config/: routes.yaml
motel-api-gateway/grafana/dashboards/: motel-api-gateway-dashboard.json
motel-api-gateway/prometheus/: prometheus.yml
motel-api-gateway/src/: config.rs  main.rs  proxy.rs  rate_limiter.rs
motel-management-apis/: .gitignore  Dockerfile  build.gradle  clear-db.sh  docker-compose.yml  run.sh  update-ecr.sh  wait-for-postgres.sh
motel-management-apis/scripts/: main.go  post-motel-chain.go  requests.go
reservation-apis/: .env  Dockerfile  docker-compose.yml  go.mod  main.go  run.sh  update-ecr.sh
reservation-apis/controllers/: health_controller.go  motel_controller.go  ping_controller.go  pricelist_controller.go  reservation_controller.go
reservation-apis/database/: mongo.go
reservation-apis/models/: price.go  reservation.go  response.go
reservation-apis/routes/: router.go
scheduled-jobs/: .env  .env.example  Dockerfile  run.sh
scheduled-jobs/app/: base.py  cli.py  http.py  utils.py
seeder/: go.mod  main.go
(+52 files in other folders)
